--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9090
 spring.datasource.url=jdbc:postgresql://localhost/carwashproject
 spring.datasource.username=postgres
-spring.datasource.password=postgresql
+spring.datasource.password=Parool1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=classpath:db/changelog/changelog.master.xml
