--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.mail</groupId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
